@@ -1,3 +1,10 @@
+2007-03-07  Dan Williams  <dcbw@redhat.com>
+
+	Patch from Sertaç Ö. Yıldız <sertacyildiz@gmail.com>
+
+	* src/applet.c
+		- (nma_get_instance) Initialize widgets earlier (Gnome.org #413245)
+
 2007-03-05  Abel Cheung  <abelcheung@gmail.com>
 
 	* configure.ac: Added 'ru' 'zh_HK' to ALL_LINGUAS.
